--- a/dev/deps/spark-deps-hadoop-2.6
+++ b/dev/deps/spark-deps-hadoop-2.6
@@ -46,7 +46,7 @@ commons-httpclient-3.1.jar
 commons-io-2.4.jar
 commons-lang-2.6.jar
 commons-lang3-3.5.jar
-commons-logging-1.1.3.jar
+commons-logging-1.2.jar
 commons-math3-3.4.1.jar
 commons-net-2.2.jar
 commons-pool-1.5.4.jar
@@ -110,6 +110,7 @@ javax.servlet-api-3.1.0.jar
 javax.ws.rs-api-2.0.1.jar
 javolution-5.5.1.jar
 jaxb-api-2.2.2.jar
+jcip-annotations-1.0.jar
 jcl-over-slf4j-1.7.16.jar
 jdo-api-3.0.1.jar
 jersey-client-2.22.2.jar
@@ -152,6 +153,8 @@ metrics-jvm-3.1.5.jar
 minlog-1.3.0.jar
 netty-3.9.9.Final.jar
 netty-all-4.1.17.Final.jar
+nomad-scala-sdk_2.11-0.0.3.jar
+nomad-sdk-0.0.3.jar
 objenesis-2.1.jar
 okhttp-3.8.1.jar
 okio-1.13.0.jar
